--- a/00.launchColab.ipynb
+++ b/00.launchColab.ipynb
@@ -17,10 +17,13 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "nFIy9XRLUeff"
+    "id": "nFIy9XRLUeff",
+    "pycharm": {
+     "name": "#%% md\n"
+    }
    },
    "source": [
-    "**Clone repository and setup **"
+    "**Clone repository and setup**"
    ]
   },
   {
@@ -132,14 +135,14 @@
    "source": [
     "!cd PhrasIS-baselines"
    ],
-   "execution_count": 52,
+   "execution_count": 9,
    "outputs": [
     {
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/content/LightHouses_AI_Context\n"
-     ],
-     "name": "stdout"
+      "/bin/bash: line 0: cd: PhrasIS-baselines: No such file or directory\r\n"
+     ]
     }
    ]
   },
@@ -155,14 +158,14 @@
    "source": [
     "!ls"
    ],
-   "execution_count": 53,
+   "execution_count": 8,
    "outputs": [
     {
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "aicontest_spec.txt  engine  examples  maps  Readme.md\n"
-     ],
-     "name": "stdout"
+      "00.launchColab.ipynb  dataset  LICENSE\tREADME.md\r\n"
+     ]
     }
    ]
   },
@@ -203,6 +206,98 @@
      ]
     }
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Load dataset**"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Feature engineering**"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Machine learning exploration**"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# TODO"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Deep learning exploration**"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
+    "# TODO"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": 10,
+   "outputs": []
   }
  ]
 }
